Update the name of structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(c-thread-pool C)
+project(simple-thread-pool C)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -O2")
 
@@ -9,11 +9,11 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/simple-container/include/
 )
 
-add_library(cthreadpool STATIC
-    ./src/cthreadpool.c
+add_library(simplethreadpool STATIC
+    ./src/thread_pool.c
 )
 
-target_link_libraries(cthreadpool
+target_link_libraries(simplethreadpool
     pthread
     simplecontainer
 )
