Remove submodule and refine code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,27 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(simple-thread-pool C)
+project(thread-pool C)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -O2 -std=gnu99 -Wextra -pedantic")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -std=gnu99 -g")
+set(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin/)
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/
-    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/simple-container/include/
+set(HEADER
+    ./include/thread_pool.h
 )
 
-add_library(simplethreadpool STATIC
+set(SOURCE
     ./src/thread_pool.c
 )
 
-target_link_libraries(simplethreadpool
-    pthread
-    simplecontainer
-)
+set(TARGET_LIB threadpool)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/simple-container)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_library(${TARGET_LIB} STATIC ${SOURCE})
+
+target_link_libraries(${TARGET_LIB} pthread)
+
+install(FILES ${HEADER} DESTINATION ${INSTALL_DIR}/include)
+install(TARGETS ${TARGET_LIB} DESTINATION ${INSTALL_DIR}/lib)
+
+add_subdirectory(test)
