--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(simple-thread-pool-test C)
+project(thread-pool-test C)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -O2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -pedantic -std=gnu99 -g")
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/include/
@@ -13,5 +13,5 @@ add_executable(test
 )
 
 target_link_libraries(test
-    simplethreadpool
+    ${TARGET_LIB}
 )
