--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,31 @@ sudo: false
 language: cpp
 
 compiler:
-  - gcc
+    - gcc
 
 before_script:
-  - mkdir build/
-  - cd build/
-  - cmake ..
+    - mkdir build/
+    - cd build/
+    - cmake ..
 
 script: make -j4
 
 after_script:
-  - ./threads_test
+    - ./tests/threads_test
 
 install:
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 
 addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
+    apt:
+        sources:
+          - ubuntu-toolchain-r-test
     packages:
-      - gcc-4.8
-      - g++-4.8
+        - gcc-4.8
+        - g++-4.8
 
 notifications:
-  email:
-    - jianfan.tw@gmail.com
-  on_success: change
-  on_failure: always
+    email:
+      - jianfan.tw@gmail.com
+    on_success: change
+    on_failure: always
