--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,5 @@ project(threadpool CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -pedantic -std=c++11 -g")
 
-add_subdirectory(src)
-
-# Tests
-add_executable(threads_test
-    ./tests/threads_test.cpp
-)
-
-target_link_libraries(threads_test
-    ${PROJECT_NAME}
-)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
