--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,5 @@
-set(HEADERS ./threadpool.h)
-
-set(SOURCES
-    ./threadpool.cpp
-    ./threadworker.cpp
-)
+set(HEADERS ${CMAKE_CURRENT_SOURCE}threadpool.h)
+set(SOURCES ${CMAKE_CURRENT_SOURCE}threadpool.cpp)
 
 # static
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
@@ -11,18 +7,6 @@ add_library(${PROJECT_NAME} STATIC ${SOURCES})
 target_link_libraries(${PROJECT_NAME}
     pthread
 )
-
-# shared
-#set(TARGET_LIB_SHARED "${PROJECT_NAME}_shared")
-#add_library(${TARGET_LIB_SHARED} SHARED ${SOURCES})
-
-#target_link_libraries(${TARGET_LIB_SHARED}
-#    pthread
-#)
-
-#set_target_properties(${TARGET_LIB_SHARED}
-#    PROPERTIES OUTPUT_NAME ${PROJECT_NAME}
-#)
 
 # Install
 install(FILES ${HEADERS}
@@ -32,7 +16,3 @@ install(FILES ${HEADERS}
 install(TARGETS ${PROJECT_NAME}
     DESTINATION lib
 )
-
-#install(TARGETS ${TARGET_LIB_SHARED}
-#    DESTINATION ${INSTALL_DIR}/lib
-#)
